# helper_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/application/: __init__.py  agents.py  workflow.py
app/application/interfaces/: __init__.py  answer_agent.py  decomposition_agent.py  evaluation.py  guardrail_agent.py  search_agent.py  telemetry.py
app/core/: __init__.py  config.py  logging_config.py  models.py
app/infrastructure/: __init__.py  document_fetcher.py  kb_manager.py  online_search.py  telemetry.py  workflow.py
app/infrastructure/agents/: __init__.py  answer_generation.py  decomposition_agent.py  guardrail.py  offline_search.py  online_search.py
app/infrastructure/services/: __init__.py  kb_manager.py  online_search.py
app/presentation/: __init__.py  cli.py
