[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-helper-agent"
version = "0.1.0"
description = "A multi-agent system for answering LangGraph and LangChain documentation questions"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Robert Dragomir", email = "robbertica97@gmail.com"}
]

[project.urls]
Repository = "https://github.com/robdragomir/helper_agent"

[project.scripts]
langgraph-helper = "app.presentation.cli:main"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false